apps/base/capacitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor
  namespace: flux-system
  # annotations:
  #   cert-manager.io/cluster-issuer: "kommander-ca"
  #   traefik.ingress.kubernetes.io/router.tls: "true"
  #   traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
  labels:
    app: capacitor
    component: service
    tier: backend

spec:
  tls:
    - hosts:
        - capacitor.mangale.com.np
      secretName: capacitor-tls
  rules:
    - host: capacitor.mangale.com.np
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
